--- a/teaching.html
+++ b/teaching.html
@@ -2,6 +2,7 @@
 <html>
 
 <!-- browser tab head  -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -12,10 +13,17 @@
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-83024954-2', 'auto');
         ga('send', 'pageview');
     </script>
@@ -24,169 +32,181 @@
 <!-- the main body  -->
 
 <body>
-<div class="wrapper">
+    <div class="wrapper">
 
-<!-- the left column  -->
+        <!-- the left column  -->
 
-<header>
-    <h1>Qihong Lu</h1>
-    <br>
+        <header>
+            <h1>Qihong Lu</h1>
+            <br>
 
-    <p class="view"><h4><a href="index.html">Home</a></h4></p>
-    <p class="view"><h4><a href="research.html">Research</a></h4></p>
-    <p class="view"><h4>Teaching</h4></p>
-    <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
-    <p class="view"><h4><a href="contact.html">Contact</a></h4></p>
-    <br><br>
+            <p class="view">
+                <h4><a href="index.html">Home</a></h4>
+            </p>
+            <p class="view">
+                <h4><a href="research.html">Research</a></h4>
+            </p>
+            <p class="view">
+                <h4>Teaching</h4>
+            </p>
+            <p class="view"><a href="resources.html">
+                    <h4>Resources</h4>
+                </a></p>
+            <p class="view">
+                <h4><a href="contact.html">Contact</a></h4>
+            </p>
+            <br><br>
 
-    <p class="view">
-    <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
-    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
-    <a href="https://twitter.com/Qihong_Lu">
-    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
-    </p>
+            <p class="view">
+                <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+                    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+                <a href="https://twitter.com/Qihong_Lu">
+                    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+            </p>
 
-    <p class="view">
-    <a href="https://github.com/QihongL">
-    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-    <a href="mailto:qlu@princeton.edu" target="_top">
-    <img src="imgs/logo/email.png" alt="email" width=40px></a>
-    </p>
-</header>
+            <p class="view">
+                <a href="https://github.com/QihongL">
+                    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+                <a href="mailto:qlu@princeton.edu" target="_top">
+                    <img src="imgs/logo/email.png" alt="email" width=40px></a>
+            </p>
+        </header>
 
-<!-- the END of left column  -->
+        <!-- the END of left column  -->
 
-<!-- the right column  -->
+        <!-- the right column  -->
 
-<section>
+        <section>
 
-<h3><p> <strong>Courses</strong></p> </h3>
+            <h3>
+                <p> <strong>Courses</strong></p>
+            </h3>
 
-<p>
-<strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
-<br>
-&emsp;
-<a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
-|
-<a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
-<br>
-<br>
+            <p>
+                <strong>Spring 2019, NEU | PSY 330: Computational Modeling of Psychological Function</strong>
+                <br>
+                &emsp;
+                <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=005628&term=1194">offcial course description</a>
+                |
+                <a href="https://github.com/PrincetonUniversity/PsyNeuLink">psyneulink</a>
+                <br>
+                <br>
 
-Here're some demos I made... 
-<br>
-- constraint satisfaction, a model of the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>  
-<br>
-&emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
-<br>
+                Here're some demos I made...
+                <br>
+                - constraint satisfaction, a model of the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
+                <br>
+                &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
+                <br>
 
-- temporal difference learning, a model of  
-<a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
-<br>
-&emsp;
-<a href="https://github.com/qihongl/demo-td">code in numpy</a>,
-<a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">
-slides on reinforcement learning</a>
-<br>
+                - temporal difference learning, a model of
+                <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
+                <br>
+                &emsp;
+                <a href="https://github.com/qihongl/demo-td">code in numpy</a>,
+                <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">
+                    slides on reinforcement learning</a>
+                <br>
 
-- q-learning with neural network function approximator, grid world navigation 
-<br>
-&emsp;
-<a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
-<br>
+                - q-learning with neural network function approximator, grid world navigation
+                <br>
+                &emsp;
+                <a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
+                <br>
 
-- statistical learning with a recurrent network 
-(<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">Elman, 1990</a>)
-<br>
-&emsp;
-<a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
-<br>
+                - statistical learning with a recurrent network
+                (<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">Elman, 1990</a>)
+                <br>
+                &emsp;
+                <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
+                <br>
 
-- the leaky competing accumulator by
-<a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
-<br>
-&emsp;
-code: <a href="https://github.com/qihongl/pylca">numpy</a>,
-<a href="https://github.com/qihongl/demo-lca">psyneulink</a>
-<br>
+                - the leaky competing accumulator by
+                <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
+                <br>
+                &emsp;
+                code: <a href="https://github.com/qihongl/pylca">numpy</a>,
+                <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
+                <br>
 
-- a neural network model of the stroop effect, qualitative replicate
-<a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
-Cohen et al (1990)
-</a>
-<br>
-&emsp;
-<a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>,
-<a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">
-slides on cognitive control</a>
-<br>
+                - a neural network model of the stroop effect, qualitative replicate
+                <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
+                    Cohen et al (1990)
+                </a>
+                <br>
+                &emsp;
+                <a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>,
+                <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">
+                    slides on cognitive control</a>
+                <br>
 
-- a LSTM with episodic memory, see  
-<a href="https://arxiv.org/abs/1805.09692">Ritter et al. (2018)</a>
-<br>
-&emsp;
-<a href="https://github.com/qihongl/dnd-lstm">code in pytorch</a>
-<br>
-
-
-<br>
-Here're some awesome interactive demos I found online... 
-<br>
-- <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
-<br>
-- <a href="https://github.com/TarinZ/hopfield-nets">The hopfield network</a> 
-<br>
-- <a href="https://playground.tensorflow.org/">Neural network play ground</a>
-<br>
-- <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
-<br>
-- <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
-<br>
-- <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
-</p>
-
-<hr>
+                - a LSTM with episodic memory, see
+                <a href="https://arxiv.org/abs/1805.09692">Ritter et al. (2018)</a>
+                <br>
+                &emsp;
+                <a href="https://github.com/qihongl/dnd-lstm">code in pytorch</a>
+                <br>
 
 
-<p>
-<strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
-<br>
-&emsp;
-<a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
-|
-<a href="https://github.com/NEU480/organization/wiki">class wiki</a>
-<br>
-<b>
-&emsp; The lab Jupyter notebooks are publicly available 
-<a href="https://brainiak.org/tutorials/">here</a>!
-</b>
-</p>
+                <br>
+                Here're some awesome interactive demos I found online...
+                <br>
+                - <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
+                <br>
+                - <a href="https://github.com/TarinZ/hopfield-nets">The hopfield network</a>
+                <br>
+                - <a href="https://playground.tensorflow.org/">Neural network play ground</a>
+                <br>
+                - <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
+                <br>
+                - <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
+                <br>
+                - <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
+            </p>
 
-Other resources: 
-<br>
-- <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
-<br>
-- <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
-<br>
-- <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
-
-<br>
-<br>
-<br>
-<img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
+            <hr>
 
 
-</section>
+            <p>
+                <strong>Fall 2018, ELE | NEU | PSY 480: fMRI Decoding: Reading Minds Using Brain Scans</strong>
+                <br>
+                &emsp;
+                <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">offcial course description</a>
+                |
+                <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
+                <br>
+                <b>
+                    &emsp; The lab Jupyter notebooks are publicly available
+                    <a href="https://brainiak.org/tutorials/">here</a>!
+                </b>
+            </p>
 
-<!-- the END of right column  -->
+            Other resources:
+            <br>
+            - <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
+            <br>
+            - <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
+            <br>
+            - <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
 
-<!-- <footer>
+            <br>
+            <br>
+            <br>
+            <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
+
+
+        </section>
+
+        <!-- the END of right column  -->
+
+        <!-- <footer>
     <p><small>Hosted on GitHub Pages<br>
     Theme by <a href="https://github.com/orderedlist">orderedlist</a>
     </small></p>
 </footer> -->
 
-</div>
-<script src="javascripts/scale.fix.js"></script>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
 
 </body>
 
