--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 
 <!-- browser tab head  -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -12,122 +13,148 @@
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83024954-2', 'auto');
-      ga('send', 'pageview');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-83024954-2', 'auto');
+        ga('send', 'pageview');
     </script>
 </head>
 
 <!-- the main body  -->
 
 <body>
-<div class="wrapper">
+    <div class="wrapper">
 
-<!-- the left column  -->
+        <!-- the left column  -->
 
-<header>
-        <h1>Qihong Lu</h1>
-        <br>
+        <header>
+            <h1>Qihong Lu</h1>
+            <br>
 
-        <p class="view"> <h4><a href="index.html">Home</a></h4></p>
-        <p class="view"> <h4><a href="research.html">Research</a></h4></p>
-        <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
-        <p class="view"> <h4><a href="resources.html">Resources</a></h4></p>
-        <p class="view"> <h4>Contact<h4></p>
-        <br><br>
+            <p class="view">
+                <h4><a href="index.html">Home</a></h4>
+            </p>
+            <p class="view">
+                <h4><a href="research.html">Research</a></h4>
+            </p>
+            <p class="view">
+                <h4><a href="teaching.html">Teaching</a></h4>
+            </p>
+            <p class="view">
+                <h4><a href="resources.html">Resources</a></h4>
+            </p>
+            <p class="view">
+                <h4>Contact<h4>
+            </p>
+            <br><br>
 
-        <p class="view">
-        <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
-        <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
-        <a href="https://twitter.com/Qihong_Lu">
-        <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
-        </p>
+            <p class="view">
+                <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
+                    <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+                <a href="https://twitter.com/Qihong_Lu">
+                    <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+            </p>
 
-        <p class="view">
-        <a href="https://github.com/QihongL">
-        <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-        <a href="mailto:qlu@princeton.edu" target="_top">
-        <img src="imgs/logo/email.png" alt="email" width=40px></a>
-        </p>
-</header>
+            <p class="view">
+                <a href="https://github.com/QihongL">
+                    <img src="imgs/logo/github.svg" alt="github" width=40px></a>
+                <a href="mailto:qlu@princeton.edu" target="_top">
+                    <img src="imgs/logo/email.png" alt="email" width=40px></a>
+            </p>
+        </header>
 
-<!-- the END of left column  -->
+        <!-- the END of left column  -->
 
-<!-- the right column  -->
+        <!-- the right column  -->
 
-<section>
+        <section>
 
-<h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-Contact info
-</h3>
+            <h3>
+                <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+                Contact info
+            </h3>
 
-<br>
-<h3><p> <strong>My emails</strong></p></h3>
-<ul>
-    <li>qlu [at] princeton.edu</li>
-    <li>qihong.lu [at] princeton.edu</li>
-    <li>qihong.lu [at] wisc.edu</li>
-</ul>
+            <br>
+            <h3>
+                <p> <strong>My emails</strong></p>
+            </h3>
+            <ul>
+                <li>qlu [at] princeton.edu</li>
+                <li>qihong.lu [at] princeton.edu</li>
+                <li>qihong.lu [at] wisc.edu</li>
+            </ul>
 
 
-<br>
-<h3><p> <strong>My office</strong></p></h3>
-<ul>
-<li>
-    136D, Princeton Neuroscience Institute <br>
-    Princeton, NJ 08544
-</li>
-</ul>
+            <br>
+            <h3>
+                <p> <strong>My office</strong></p>
+            </h3>
+            <ul>
+                <li>
+                    136D, Princeton Neuroscience Institute <br>
+                    Princeton, NJ 08544
+                </li>
+            </ul>
 
-<br>
+            <br>
 
-<!DOCTYPE html>
-<html>
-    <head>
-    <style>
-        #map {
-        height: 350px;
-        width: 90%;
-        }
-    </style>
-    </head>
-    <body>
-    <h4>Peretsman Scully Hall / Princeton Neuroscience Institute</h4>
-    <div id="map"></div>
-    <script>
-        function initMap() {
-        var uluru = {lat: 40.343037, lng: -74.652503};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 17,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-        }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBikNgQ8AugNxfEuEI31XGGbl-oNrdUdZo&callback=initMap">
-    </script>
-    </body>
-</html>
+            <!DOCTYPE html>
+            <html>
 
-</section>
+            <head>
+                <style>
+                    #map {
+                        height: 350px;
+                        width: 90%;
+                    }
+                </style>
+            </head>
 
-<!-- the END of right column  -->
+            <body>
+                <h4>Peretsman Scully Hall / Princeton Neuroscience Institute</h4>
+                <div id="map"></div>
+                <script>
+                    function initMap() {
+                        var uluru = {
+                            lat: 40.343037,
+                            lng: -74.652503
+                        };
+                        var map = new google.maps.Map(document.getElementById('map'), {
+                            zoom: 17,
+                            center: uluru
+                        });
+                        var marker = new google.maps.Marker({
+                            position: uluru,
+                            map: map
+                        });
+                    }
+                </script>
+                <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBikNgQ8AugNxfEuEI31XGGbl-oNrdUdZo&callback=initMap">
+                </script>
+            </body>
 
-<!--       <footer>
+            </html>
+
+        </section>
+
+        <!-- the END of right column  -->
+
+        <!--       <footer>
         <p><small>Hosted on GitHub Pages<br>
         Theme by <a href="https://github.com/orderedlist">orderedlist</a>
         </small></p>
       </footer> -->
-</div>
-<script src="javascripts/scale.fix.js"></script>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
 
 </body>
 
