--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <!-- browser tab head  -->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -12,10 +13,17 @@
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-83024954-2', 'auto');
         ga('send', 'pageview');
     </script>
@@ -72,14 +80,16 @@
 </center>
 
 <p>
-Hi, my name is Qihong Lu (吕其鸿).
+Hi, my name is Qihong Lu.
 I'm a 2nd year grad student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
 I'm working on computational models of episodic memory.
-Here's my <a href="docs/CV_QL.pdf">CV</a>.
+Here's my
+<a href="docs/CV_QL.pdf">CV</a>
+.
 
 </p>
 
