--- a/index.html
+++ b/index.html
@@ -88,20 +88,21 @@ and
 at Princeton.
 I'm working on computational models of episodic memory.
 Here's my
-<a href="docs/CV_QL.pdf">CV</a>
-.
+<a href="docs/CV_QL.pdf">CV</a>.
 
-</p>
-
-<b>The PDP meeting</b><br>
-I'm organizing the PDP (parallel distributed processing) meeting, a weekly meeting on neural/cognitive computational models.
+<br>
+I'm organizing the 
+<a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>, 
+feel free to contact me if you would like to give a talk.
+ 
+<!-- a weekly meeting on neural/cognitive computational models.
 Feel free to contact me if you (including external speakers) would like to ...
     <ul>
     <li>join the mailing list</li>
     <li>present your work</li>
     <li>propose some external speaker(s)</li>
     <li>anything PDP related!</li>
-</ul>
+</ul> -->
 
 </section>
 
