--- a/research.html
+++ b/research.html
@@ -115,9 +115,9 @@
                         <p>
                             <b>Shared representational geometry across neural networks</b>
                             <br>
-                            Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U.
+                            Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. (2018)
                             <br>
-                            Workshop on Integration of Deep Learning Theories, NeurIPS 2018.
+                            Workshop on Integration of Deep Learning Theories, NeurIPS.
                             <br>
                             <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
                             <a href="https://arxiv.org/abs/1811.11684">paper</a>,
@@ -149,7 +149,7 @@
                             <br>
                             Kumar, M., Ellis, C. T., Lu, Q., Zhang, H., Ramadge P. J., Turk-Browne N. B., & Norman, K. A. (2019)
                             <br>
-                            osf preprints
+                            Open Science Framework
                             <br>
                             <a href="https://osf.io/j4sbc/">paper</a>,
                             <a href="https://brainiak.org/tutorials/">tutorial site</a>
