--- a/teaching.html
+++ b/teaching.html
@@ -92,78 +92,86 @@
                 <br>
                 <br>
 
-                Here're some demos I made...
-                <br>
-                - constraint satisfaction, a model of the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
-                <br>
-                &emsp; <a href="https://github.com/qihongl/demo-necker-cube">code in psyneulink</a>
-                <br>
+                Here're some demos. Most of them are on google colab, let me know if you have trouble running them.
+                <ul>
+                    <li>
+                        Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-necker-cube">psyneulink</a>
+                    </li>
 
-                - temporal difference learning, a model of
-                <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
-                <br>
-                &emsp;
-                <a href="https://github.com/qihongl/demo-td">code in numpy</a>,
-                <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">
-                    slides on reinforcement learning</a>
-                <br>
+                    <li>
+                        The hopfield network, pattern-completion
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-hopfield-network">numpy</a>
+                    </li>
 
-                - q-learning with neural network function approximator, grid world navigation
-                <br>
-                &emsp;
-                <a href="https://github.com/qihongl/demo-q-learning">code in numpy / pytorch</a>
-                <br>
+                    <li>
+                        Temporal difference learning,
+                        <a href="https://en.wikipedia.org/wiki/Second-order_conditioning">higher order conditioning</a>
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-td">numpy</a> |
+                        <a href="https://docs.google.com/presentation/d/1FZzoebdkT6g103CbYOA87Hz_CUIdjs37wVu7TB2E4RA/edit?usp=sharing">slides
+                        </a>
+                    </li>
 
-                - statistical learning with a recurrent network
-                (<a href="https://www.sciencedirect.com/science/article/pii/036402139090002E">Elman, 1990</a>)
-                <br>
-                &emsp;
-                <a href="https://github.com/qihongl/demo-elman-1990">code in pytorch / psyneulink</a>
-                <br>
+                    <li>
+                        Q-learning with function approximation, grid world navigation
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-q-learning">pytorch and numpy</a>
+                    </li>
 
-                - the leaky competing accumulator by
-                <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
-                <br>
-                &emsp;
-                code: <a href="https://github.com/qihongl/pylca">numpy</a>,
-                <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
-                <br>
+                    <li>
+                        Recurrent neural network, statistical learning
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-elman-1990">pytorch and psyneulink</a>
+                    </li>
 
-                - a neural network model of the stroop effect, qualitative replicate
-                <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">
-                    Cohen et al (1990)
-                </a>
-                <br>
-                &emsp;
-                <a href="https://github.com/qihongl/stroop-cohen-etal-1990">code in psyneulink</a>,
-                <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">
-                    slides on cognitive control</a>
-                <br>
+                    <li>
+                        The leaky competing accumulator by
+                        <a href="https://www.ncbi.nlm.nih.gov/pubmed/11488378">Usher & McClelland (2001)</a>
+                        <br>
+                        code: <a href="https://github.com/qihongl/pylca">numpy</a>,
+                        <a href="https://github.com/qihongl/demo-lca">psyneulink</a>
+                    </li>
 
-                - a LSTM with episodic memory, see
-                <a href="https://arxiv.org/abs/1805.09692">Ritter et al. (2018)</a>
-                <br>
-                &emsp;
-                <a href="https://github.com/qihongl/dnd-lstm">code in pytorch</a>
-                <br>
+                    <li>
+                        The stroop model, qualitative replicate <a href="https://www.ncbi.nlm.nih.gov/pubmed/2200075">Cohen et al (1990)</a>
+                        <br>
+                        code: <a href="https://github.com/qihongl/stroop-cohen-etal-1990">psyneulink</a> |
+                        <a href="https://docs.google.com/presentation/d/1uG9LVT5susIOUvRCeg8qzzZNwNnwRbGPTiRGcjAyqGU/edit?usp=sharing">slides</a>
+                    </li>
 
+                    <li>
+                        A memory-augmented neural network
+                        <br>
+                        code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a>
+                    </li>
+                </ul>
 
                 <br>
-                Here're some awesome interactive demos I found online...
-                <br>
-                - <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
-                <br>
-                - <a href="https://github.com/TarinZ/hopfield-nets">The hopfield network</a>
-                <br>
-                - <a href="https://playground.tensorflow.org/">Neural network play ground</a>
-                <br>
-                - <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
-                <br>
-                - <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
-                <br>
-                - <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
+                Here're some awesome demos I found online:
+                <ul>
+                    <li>
+                        <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
+                    </li>
+                    <li>
+                        <a href="https://playground.tensorflow.org/">Neural network play ground</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
+                    </li>
+                    <li>
+                        <a href="https://www.med.upenn.edu/longding1/javascript/DDM_LongDing.html">The drift diffusion model</a>
+                    </li>
+                    <li>
+                        <a href="https://cs.stanford.edu/people/karpathy/reinforcejs/index.html">REINFORCEjs</a>
+                    </li>
+
+                </ul>
             </p>
 
+            <br><br>
             <hr>
 
 
