--- a/teaching.html
+++ b/teaching.html
@@ -101,7 +101,7 @@
                     </li>
 
                     <li>
-                        The hopfield network, pattern-completion
+                        The hopfield network, pattern completion
                         <br>
                         code: <a href="https://github.com/qihongl/demo-hopfield-network">numpy</a>
                     </li>
