--- a/teaching.html
+++ b/teaching.html
@@ -92,7 +92,7 @@
                 <br>
                 <br>
 
-                Here're some demos. Most of them are on google colab, let me know if you have trouble running them.
+                Here're some demos. Most of them are on google colab. Let me know if you have trouble running any of them.
                 <ul>
                     <li>
                         Constraint satisfaction network, the <a href="https://en.wikipedia.org/wiki/Necker_cube">necker cube illusion</a>
@@ -188,16 +188,21 @@
                     <a href="https://brainiak.org/tutorials/">here</a>!
                 </b>
             </p>
+            <br>
 
             Other resources:
-            <br>
-            - <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
-            <br>
-            - <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
-            <br>
-            - <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
+            <ul>
+                <li>
+                    <a href="https://dartbrains.org/intro">Introduction to fMRI data analysis</a>, Luke Chang, Dartmouth
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=yA65FuSpOMs&list=PLyGKBDfnk-iDVpUGSR_GlDmQrZOS0Lk6k">fMRI Bootcamp</a>, Rebecca Saxe, MIT
+                </li>
+                <li>
+                    <a href="http://nancysbraintalks.mit.edu/">nancys braintalks</a>, Nancy Kanwisher, MIT
+                </li>
+            </ul>
 
-            <br>
             <br>
             <br>
             <img src="imgs/misc/git_in_case_of_fire.png" alt="git" class="center" width="200">
