--- a/research.html
+++ b/research.html
@@ -148,7 +148,7 @@
                         <p>
                             <b>BrainIAK tutorials: user-friendly learning materials for advanced fMRI analysis</b>
                             <br>
-                            Kumar, M., Ellis, C. T., Lu, Q., Zhang, H., Ramadge P. J., Turk-Browne N. B., & Norman, K. A. (2019)
+                            Kumar, M., Ellis, C.T., Lu, Q., Zhang, H., Capota, M., Willke, T.L., Ramadge, P.J., Turk-Browne, N.B., & Norman, K.A. (2019)
                             <br>
                             Open Science Framework
                             <br>
