--- a/research.html
+++ b/research.html
@@ -123,8 +123,8 @@
                             <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
                             <a href="https://arxiv.org/abs/1811.11684">paper</a>,
                             <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
-                            <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial on google colab</a>,
-                            <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a>
+                            <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
+                            <!-- <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a> -->
                         </p>
 
                     </p>
@@ -150,10 +150,10 @@
                             <br>
                             Kumar, M., Ellis, C.T., Lu, Q., Zhang, H., Capota, M., Willke, T.L., Ramadge, P.J., Turk-Browne, N.B., & Norman, K.A. (2019)
                             <br>
-                            Open Science Framework
+                            OSF Preprints
                             <br>
                             <a href="https://osf.io/j4sbc/">paper</a>,
-                            <a href="https://brainiak.org/tutorials/">tutorial site</a>
+                            <a href="https://brainiak.org/tutorials/">tutorial</a>
                         </p>
                         <br>
 
@@ -179,8 +179,8 @@
                             <a href="https://qihongl.github.io/docs/NIPS18_poster_NNSRM.pdf">poster</a>,
                             <a href="https://arxiv.org/abs/1811.11684">paper</a>,
                             <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
-                            <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial on google colab</a>,
-                            <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a>
+                            <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
+                            <!-- <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a> -->
                         </p>
                         <br>
 
