--- a/resources.html
+++ b/resources.html
@@ -185,7 +185,7 @@
                     [<a href="https://www.youtube.com/channel/UCF9O8Vj-FEbRDA5DcDGz-Pg/videos">videos</a>],
                     Ian Goodfellow, Yoshua Bengio and Aaron Courville
                 </li>
-                <li><a href="http://ufal.mff.cuni.cz/~straka/courses/npfl114/2016/sutton-bookdraft2016sep.pdf">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
+                <li><a href="http://incompleteideas.net/book/the-book.html">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
                 </li>
                 <li><a href="http://probmods.org/">Probabilistic Models of Cognition</a>, Noah D. Goodman & Joshua B. Tenenbaum
                 </li>
