--- a/teaching.html
+++ b/teaching.html
@@ -147,16 +147,22 @@
                         <br>
                         code: <a href="https://github.com/qihongl/dnd-lstm">pytorch</a>
                     </li>
+
+                    <li>
+                        Some common nonlinearities used in neural networks
+                        <br>
+                        <a href="https://github.com/qihongl/demo-nonlinearities">demo</a>
+                    </li>
                 </ul>
 
                 <br>
                 Here're some awesome demos I found online:
                 <ul>
                     <li>
-                        <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Perceptron</a>
+                        <a href="https://lecture-demo.ira.uka.de/neural-network-demo/?preset=Rosenblatt%20Perceptron">Neural network demo</a>: perceptron, MLP, autoencoder, etc.
                     </li>
                     <li>
-                        <a href="https://playground.tensorflow.org/">Neural network play ground</a>
+                        <a href="https://playground.tensorflow.org/">Neural network playground</a>
                     </li>
                     <li>
                         <a href="https://github.com/iRath96/som-demo">Self-organizing map</a>
@@ -184,7 +190,7 @@
                 <a href="https://github.com/NEU480/organization/wiki">class wiki</a>
                 <br>
                 <b>
-                    &emsp; The lab Jupyter notebooks are publicly available
+                    &emsp; The Jupyter notebooks used for the labs are publicly available
                     <a href="https://brainiak.org/tutorials/">here</a>!
                 </b>
             </p>
