add the wave paper

--- a/research.html
+++ b/research.html
@@ -101,9 +101,22 @@
 
                 <div id="Selected" class="tabcontent" style="display:block">
                     <p>
-                        <br>
+
+                        <!-- <br>
                         <p>
-                            <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding.</b>
+                            <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
+                            <br>
+                            Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
+                            <br>
+                            The Conference on Cognitive Computational Neuroscience (CCN)
+                            <br>
+                            <a href="">paper</a>
+                        </p>
+                        <br> -->
+
+
+                        <p>
+                            <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
                             <br>
@@ -144,6 +157,17 @@
                             <p><strong>Preprints</strong></p>
                         </h3>
 
+                        <p>
+                            <b>Evidence for a deep, distributed and dynamic semantic code in human ventral anterior temporal cortex</b>
+                            <br>
+                            Rogers, T. T., Cox, C., Lu, Q., Shimotake, A., Kikuch, T., Kunieda, T., Miyamoto, S., Takahashi, R., Ikeda, A., Matsumoto, R., Lambon Ralph, M. A. (2019)
+                            <br>
+                            bioRxiv
+                            <br>
+                            <a href="https://www.biorxiv.org/content/10.1101/695049v1?rss=1">paper</a>
+                            <br>
+                        </p>
+                        <br>
 
                         <p>
                             <b>BrainIAK tutorials: user-friendly learning materials for advanced fMRI analysis</b>
@@ -153,7 +177,9 @@
                             OSF Preprints
                             <br>
                             <a href="https://osf.io/j4sbc/">paper</a>,
-                            <a href="https://brainiak.org/tutorials/">tutorial</a>
+                            <a href="https://brainiak.org/tutorials/">tutorial</a>,
+                            <a href="https://twitter.com/manojneuro/status/1137850837684891650">poster</a>
+                            <br>
                         </p>
                         <br>
 
@@ -180,7 +206,7 @@
                             <a href="https://arxiv.org/abs/1811.11684">paper</a>,
                             <a href="https://github.com/qihongl/nnsrm-neurips18">code</a>,
                             <a href="https://colab.research.google.com/github/qihongl/demo-nnalign/blob/master/demo-nnalign.ipynb">tutorial</a>
-                            <!-- <a href="https://qihongl.github.io/nnsrm-NeurIPS18.html">some animations</a> -->
+
                         </p>
                         <br>
 
@@ -200,8 +226,22 @@
                             <p><strong>Conference presentations</strong></p>
                         </h3>
 
+
+                        <!-- <br>
                         <p>
-                            <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding.</b>
+                            <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
+                            <br>
+                            Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
+                            <br>
+                            The Conference on Cognitive Computational Neuroscience (CCN)
+                            <br>
+                            <a href="">paper</a>
+                        </p>
+                        <br> -->
+
+
+                        <p>
+                            <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
                             <br>
