add ccn 19 paper

--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@
                     <p>
                         <br>
 
-                        <!-- <br>
+                        <br>
                         <p>
                             <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
                             <br>
@@ -111,21 +111,10 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="">paper</a>
-                        </p>
-                        <br> -->
-
-
-                        <p>
-                            <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
-                            <br>
-                            Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
-                            <br>
-                            The Context and Episodic Memory Symposium (CEMS)
-                            <br>
-                            <a href="https://qihongl.github.io/docs/CEMS19_poster_wait_ql.pdf">poster</a>
+                            <a href="https://www.researchgate.net/publication/334710597_Optimal_Timing_for_Episodic_Retrieval_and_Encoding_for_Event_Understanding">paper</a>
                         </p>
                         <br>
+
 
                         <p>
                             <b>Shared representational geometry across neural networks</b>
@@ -227,7 +216,7 @@
                         </h3>
 
 
-                        <!-- <br>
+                        <br>
                         <p>
                             <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
                             <br>
@@ -235,9 +224,9 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="">paper</a>
+                            <a href="https://www.researchgate.net/publication/334710597_Optimal_Timing_for_Episodic_Retrieval_and_Encoding_for_Event_Understanding">paper</a>
                         </p>
-                        <br> -->
+                        <br>
 
 
                         <p>
