--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <p>
 Hi, my name is Qihong Lu.
-I'm a 2nd year grad student with
+I'm a grad student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
@@ -91,10 +91,10 @@ Here's my
 <a href="docs/CV_QL.pdf">CV</a>.
 
 <br>
-I'm organizing the 
-<a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>, 
+I'm organizing the
+<a href="https://pdp-princeton.github.io/PDP-schedule/">PDP meeting</a>,
 feel free to contact me if you would like to give a talk.
- 
+
 <!-- a weekly meeting on neural/cognitive computational models.
 Feel free to contact me if you (including external speakers) would like to ...
     <ul>
