--- a/research.html
+++ b/research.html
@@ -111,7 +111,7 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="https://www.researchgate.net/publication/334710597_Optimal_Timing_for_Episodic_Retrieval_and_Encoding_for_Event_Understanding">paper</a>
+                            <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
 
@@ -224,7 +224,7 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="https://www.researchgate.net/publication/334710597_Optimal_Timing_for_Episodic_Retrieval_and_Encoding_for_Event_Understanding">paper</a>
+                            <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
 
