--- a/research.html
+++ b/research.html
@@ -105,12 +105,13 @@
 
                         <br>
                         <p>
-                            <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
+                            <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
+                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>, 
                             <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
@@ -200,7 +201,7 @@
                         <br>
 
                         <p>
-                            <b>A Parallel-Distributed Processing Approach to Mathematical Cognition</b>
+                            <b>A Parallel-Distributed Processing approach to mathematical cognition</b>
                             <br>
                             McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
                             <br>
@@ -218,18 +219,19 @@
 
                         <br>
                         <p>
-                            <b>Optimal Timing for Episodic Retrieval and Encoding for Event Understanding</b>
+                            <b>Optimal timing for episodic retrieval and encoding for event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
+                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>, 
                             <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
 
 
-                        <p>
+<!--                         <p>
                             <b>Patience is a virtue: A normative account of why waiting to encode and retrieve memories benefits event understanding</b>
                             <br>
                             Lu, Q., Fan, Z. Y., Hasson, U., & Norman, K. A. (2019)
@@ -238,7 +240,7 @@
                             <br>
                             <a href="https://qihongl.github.io/docs/CEMS19_poster_wait_ql.pdf">poster</a>
                         </p>
-                        <br>
+                        <br> -->
 
                         <p>
                             <b>Modeling hippocampal-cortical dynamics during event processing</b>
@@ -276,7 +278,7 @@
                         </p>
                         <br>
 
-                        <p>
+<!--                         <p>
                             <b>Measuring representational similarity across neural networks</b>
                             <br>
                             Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018)
@@ -285,7 +287,7 @@
                             <br>
                             <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
                         </p>
-                        <br>
+                        <br> -->
 
                         <p>
                             <b>An interactive model accounts for ultra-rapid superordinate classification and basic-level advantage</b>
