rm resource page

--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,9 @@
             <p class="view">
                 <h4><a href="teaching.html">Teaching</a></h4>
             </p>
-            <p class="view">
+            <!-- <p class="view">
                 <h4><a href="resources.html">Resources</a></h4>
-            </p>
+            </p> -->
             <p class="view">
                 <h4>Contact<h4>
             </p>
