--- a/research.html
+++ b/research.html
@@ -49,9 +49,9 @@
             <p class="view">
                 <h4><a href="teaching.html">Teaching</a></h4>
             </p>
-            <p class="view"><a href="resources.html">
+            <!-- <p class="view"><a href="resources.html">
                     <h4>Resources</h4>
-                </a></p>
+                </a></p> -->
             <p class="view"><a href="contact.html">
                     <h4>Contact</h4>
                 </a></p>
@@ -111,7 +111,7 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>, 
+                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
                             <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
@@ -225,7 +225,7 @@
                             <br>
                             The Conference on Cognitive Computational Neuroscience (CCN)
                             <br>
-                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>, 
+                            <a href="https://qihongl.github.io/docs/CCN19_poster_HCModel.pdf">poster</a>,
                             <a href="https://ccneuro.org/2019/Papers/ViewPapers.asp?PaperNum=1072">paper</a>
                         </p>
                         <br>
