--- a/teaching.html
+++ b/teaching.html
@@ -49,9 +49,9 @@
             <p class="view">
                 <h4>Teaching</h4>
             </p>
-            <p class="view"><a href="resources.html">
+            <!-- <p class="view"><a href="resources.html">
                     <h4>Resources</h4>
-                </a></p>
+                </a></p> -->
             <p class="view">
                 <h4><a href="contact.html">Contact</a></h4>
             </p>
@@ -120,6 +120,12 @@
                         <br>
                         code: <a href="https://github.com/qihongl/demo-q-learning">pytorch and numpy</a>
                     </li>
+
+                    <!-- <li>
+                        Advantage actor critic, some openAI gym environment
+                        <br>
+                        code: <a href="https://github.com/qihongl/demo-advantage-actor-critic">pytorch</a>
+                    </li> -->
 
                     <li>
                         Recurrent neural network, statistical learning
