--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p class="view"><h4>Home</h4></p>
     <p class="view"><a href="research.html"><h4>Research</h4></a></p>
     <p class="view"><h4><a href="teaching.html">Teaching</a></h4></p>
-    <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
+<!--     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p> -->
     <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
     <br><br>
 
